Ajout de tous les types de pièces